--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".DrawerActivity"
-    tools:showIn="@layout/app_bar_drawer"
-    >
 
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
+<layout>
+  <!--<data>-->
+    <!--<variable-->
+        <!--name="presenter"-->
+        <!--type="net.emojiparty.android.popularmovies.presenters.MoviePresenter"-->
+        <!--/>-->
+  <!--</data>-->
 
-</android.support.constraint.ConstraintLayout>
+  <android.support.constraint.ConstraintLayout
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      app:layout_behavior="@string/appbar_scrolling_view_behavior"
+      tools:context=".DrawerActivity"
+      tools:showIn="@layout/app_bar_drawer"
+      >
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/search_results_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+  </android.support.constraint.ConstraintLayout>
+</layout>
