style list item

--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -17,40 +17,59 @@
 
     <TextView
         android:id="@+id/li_kanji"
-        android:text="@{presenter.entry.primaryKanji}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:textSize="24sp"
+        android:layout_marginTop="24dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingEnd="16dp"
+        android:paddingRight="16dp"
+        android:singleLine="true"
+        android:text="@{presenter.getKanjiOrReading()}"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="猫"
         />
     <TextView
         android:id="@+id/li_reading"
-        android:text="@{presenter.entry.primaryReading}"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        tools:text="ねこ"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="@{presenter.getReading()}"
+        android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/li_kanji"
         app:layout_constraintBottom_toBottomOf="@+id/li_kanji"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/li_kanji"
+        tools:text="ねこ"
         />
     <TextView
         android:id="@+id/li_gloss"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="4dp"
-        android:paddingBottom="16dp"
+        android:paddingBottom="24dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="@{presenter.getPrimaryGloss()}"
+        android:textSize="18sp"
         app:fontFamily="sans-serif"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/li_kanji"
         app:layout_constraintTop_toBottomOf="@+id/li_kanji"
-        tools:text="cat"
+        tools:text="cats are so cute wow i love them all with their jelly bean toes"
         />
 
     <View
