--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -15,7 +15,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
-      tools:context=".DrawerActivity"
+      tools:context=".ui.DrawerActivity"
       tools:showIn="@layout/app_bar_drawer"
       >
 
