--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -13,7 +13,8 @@
 
   <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
-      android:layout_height="wrap_content">
+      android:layout_height="wrap_content"
+      android:onClick="@{() -> presenter.openDefinitionActivity(context)}">
 
     <TextView
         android:id="@+id/li_kanji"
