--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -47,10 +47,10 @@
           android:layout_marginLeft="16dp"
           android:layout_marginStart="16dp"
           android:text="@{presenter.getReading()}"
-          android:visibility="@{ presenter.hasKanji() ? View.VISIBLE : View.GONE }"
-          tools:text="ねこじゃらし"
+          visibleOrGone="@{presenter.hasKanji()}"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
+          tools:text="ねこじゃらし"
           />
 
       <TextView
@@ -61,27 +61,33 @@
           android:layout_marginStart="16dp"
           android:layout_marginTop="8dp"
           android:text="@{presenter.getKanjiOrReading()}"
-          tools:text="猫じゃらし"
           android:textSize="36sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/def_reading"
+          tools:text="猫じゃらし"
           />
 
       <!--<View-->
-          <!--android:id="@+id/senses_container"-->
-          <!--android:layout_height="0dp"-->
-          <!--android:layout_width="match_parent"-->
-          <!--app:layout_constraintStart_toStartOf="@id/def_kanji"-->
-          <!--app:layout_constraintTop_toBottomOf="@id/def_kanji"-->
-          <!--/>-->
+      <!--android:id="@+id/senses_container"-->
+      <!--android:layout_height="0dp"-->
+      <!--android:layout_width="match_parent"-->
+      <!--app:layout_constraintStart_toStartOf="@id/def_kanji"-->
+      <!--app:layout_constraintTop_toBottomOf="@id/def_kanji"-->
+      <!--/>-->
 
       <TextView
           android:id="@+id/def_alt_kanji_header"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:paddingBottom="8dp"
+          android:paddingTop="16dp"
           android:text="@string/alt_kanji"
+          visibleOrGone="@{presenter.hasAlternateKanji()}"
+          app:layout_constraintBottom_toTopOf="@+id/def_alt_kanji"
           app:layout_constraintStart_toStartOf="@+id/def_kanji"
           app:layout_constraintTop_toBottomOf="@+id/def_kanji"
+          app:layout_constraintVertical_bias="0.0"
+          app:layout_constraintVertical_chainStyle="packed"
           />
 
       <TextView
@@ -89,16 +95,23 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@{presenter.getAlternateKanji()}"
-          tools:text="ネコジャラシ"
+          android:textSize="18sp"
+          visibleOrGone="@{presenter.hasAlternateKanji()}"
+          app:layout_constraintBottom_toTopOf="@+id/def_alt_readings_header"
           app:layout_constraintStart_toStartOf="@+id/def_alt_kanji_header"
           app:layout_constraintTop_toBottomOf="@+id/def_alt_kanji_header"
+          tools:text="ネコジャラシ"
           />
 
       <TextView
           android:id="@+id/def_alt_readings_header"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:paddingBottom="8dp"
+          android:paddingTop="16dp"
           android:text="@string/alt_readings"
+          visibleOrGone="@{presenter.hasAlternateReadings()}"
+          app:layout_constraintBottom_toTopOf="@+id/def_alt_readings"
           app:layout_constraintStart_toStartOf="@+id/def_alt_kanji"
           app:layout_constraintTop_toBottomOf="@+id/def_alt_kanji"
           />
@@ -108,9 +121,12 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@{presenter.getAlternateReadings()}"
-          tools:text="ネコジャラシ"
+          android:textSize="18sp"
+          visibleOrGone="@{presenter.hasAlternateReadings()}"
+          app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="@+id/def_alt_readings_header"
           app:layout_constraintTop_toBottomOf="@+id/def_alt_readings_header"
+          tools:text="ネコジャラシ"
           />
 
     </android.support.constraint.ConstraintLayout>
