--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -33,103 +33,117 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="24dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:paddingTop="?attr/actionBarSize"
+        android:clipToPadding="false"
         >
 
-      <TextView
-          android:id="@+id/def_reading"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="16dp"
-          android:layout_marginStart="16dp"
-          android:text="@{presenter.getReading()}"
-          visibleOrGone="@{presenter.hasKanji()}"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          tools:text="ねこじゃらし"
-          />
+      <android.support.constraint.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:paddingTop="24dp"
+          app:layout_behavior="@string/appbar_scrolling_view_behavior"
+          >
 
-      <TextView
-          android:id="@+id/def_kanji"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="16dp"
-          android:layout_marginStart="16dp"
-          android:layout_marginTop="8dp"
-          android:text="@{presenter.getKanjiOrReading()}"
-          android:textSize="36sp"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/def_reading"
-          tools:text="猫じゃらし"
-          />
+        <TextView
+            android:id="@+id/def_reading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="@{presenter.getReading()}"
+            visibleOrGone="@{presenter.hasKanji()}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="ねこじゃらし"
+            />
 
-      <!--<View-->
-      <!--android:id="@+id/senses_container"-->
-      <!--android:layout_height="0dp"-->
-      <!--android:layout_width="match_parent"-->
-      <!--app:layout_constraintStart_toStartOf="@id/def_kanji"-->
-      <!--app:layout_constraintTop_toBottomOf="@id/def_kanji"-->
-      <!--/>-->
+        <TextView
+            android:id="@+id/def_kanji"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@{presenter.getKanjiOrReading()}"
+            android:textSize="36sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/def_reading"
+            tools:text="猫じゃらし"
+            />
 
-      <TextView
-          android:id="@+id/def_alt_kanji_header"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:paddingBottom="8dp"
-          android:paddingTop="16dp"
-          android:text="@string/alt_kanji"
-          visibleOrGone="@{presenter.hasAlternateKanji()}"
-          app:layout_constraintBottom_toTopOf="@+id/def_alt_kanji"
-          app:layout_constraintStart_toStartOf="@+id/def_kanji"
-          app:layout_constraintTop_toBottomOf="@+id/def_kanji"
-          app:layout_constraintVertical_bias="0.0"
-          app:layout_constraintVertical_chainStyle="packed"
-          />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/senses_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layout_constraintStart_toStartOf="@+id/def_kanji"
+            app:layout_constraintTop_toBottomOf="@+id/def_kanji"
+            />
 
-      <TextView
-          android:id="@+id/def_alt_kanji"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@{presenter.getAlternateKanji()}"
-          android:textSize="18sp"
-          visibleOrGone="@{presenter.hasAlternateKanji()}"
-          app:layout_constraintBottom_toTopOf="@+id/def_alt_readings_header"
-          app:layout_constraintStart_toStartOf="@+id/def_alt_kanji_header"
-          app:layout_constraintTop_toBottomOf="@+id/def_alt_kanji_header"
-          tools:text="ネコジャラシ"
-          />
+        <TextView
+            android:id="@+id/def_alt_kanji_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:paddingTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="@string/alt_kanji"
+            visibleOrGone="@{presenter.hasAlternateKanji()}"
+            app:layout_constraintBottom_toTopOf="@+id/def_alt_kanji"
+            app:layout_constraintStart_toStartOf="@+id/senses_rv"
+            app:layout_constraintTop_toBottomOf="@+id/senses_rv"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_chainStyle="packed"
+            />
 
-      <TextView
-          android:id="@+id/def_alt_readings_header"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:paddingBottom="8dp"
-          android:paddingTop="16dp"
-          android:text="@string/alt_readings"
-          visibleOrGone="@{presenter.hasAlternateReadings()}"
-          app:layout_constraintBottom_toTopOf="@+id/def_alt_readings"
-          app:layout_constraintStart_toStartOf="@+id/def_alt_kanji"
-          app:layout_constraintTop_toBottomOf="@+id/def_alt_kanji"
-          />
+        <TextView
+            android:id="@+id/def_alt_kanji"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{presenter.getAlternateKanji()}"
+            android:textSize="18sp"
+            visibleOrGone="@{presenter.hasAlternateKanji()}"
+            app:layout_constraintBottom_toTopOf="@+id/def_alt_readings_header"
+            app:layout_constraintStart_toStartOf="@+id/def_alt_kanji_header"
+            app:layout_constraintTop_toBottomOf="@+id/def_alt_kanji_header"
+            tools:text="ネコジャラシ"
+            />
 
-      <TextView
-          android:id="@+id/def_alt_readings"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@{presenter.getAlternateReadings()}"
-          android:textSize="18sp"
-          visibleOrGone="@{presenter.hasAlternateReadings()}"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toStartOf="@+id/def_alt_readings_header"
-          app:layout_constraintTop_toBottomOf="@+id/def_alt_readings_header"
-          tools:text="ネコジャラシ"
-          />
+        <TextView
+            android:id="@+id/def_alt_readings_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:paddingTop="16dp"
+            android:text="@string/alt_readings"
+            visibleOrGone="@{presenter.hasAlternateReadings()}"
+            app:layout_constraintBottom_toTopOf="@+id/def_alt_readings"
+            app:layout_constraintStart_toStartOf="@+id/def_alt_kanji"
+            app:layout_constraintTop_toBottomOf="@+id/def_alt_kanji"
+            />
 
-    </android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/def_alt_readings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{presenter.getAlternateReadings()}"
+            android:textSize="18sp"
+            visibleOrGone="@{presenter.hasAlternateReadings()}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/def_alt_readings_header"
+            app:layout_constraintTop_toBottomOf="@+id/def_alt_readings_header"
+            tools:text="ネコジャラシ"
+            />
+
+      </android.support.constraint.ConstraintLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
