--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -29,7 +29,7 @@
         android:paddingRight="16dp"
         android:singleLine="true"
         android:text="@{presenter.getKanjiOrReading()}"
-        android:textSize="30sp"
+        android:textSize="@dimen/text_size_list_heading"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="猫"
@@ -45,7 +45,7 @@
         android:maxLines="1"
         android:singleLine="true"
         android:text="@{presenter.getReading()}"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBaseline_toBaselineOf="@id/li_kanji"
         app:layout_constraintBottom_toBottomOf="@+id/li_kanji"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
         android:maxLines="1"
         android:singleLine="true"
         android:text="@{presenter.getPrimaryGloss()}"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_body"
         app:fontFamily="sans-serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/li_kanji"
@@ -74,16 +74,11 @@
         />
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorPrimaryDark"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/divider"
+        />
 
   </android.support.constraint.ConstraintLayout>
 </layout>
