--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
   <dimen name="nav_header_vertical_spacing">8dp</dimen>
   <dimen name="nav_header_height">176dp</dimen>
   <dimen name="fab_margin">16dp</dimen>
+
+  <dimen name="text_size_body">18sp</dimen>
+  <dimen name="text_size_list_heading">30sp</dimen>
+  <dimen name="text_size_headline">36sp</dimen>
 </resources>
