--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,19 @@
 
   <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+  <style name="divider">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">1dp</item>
+    <item name="android:background">@color/lineGray</item>
+    <item name="android:layout_marginLeft">16dp</item>
+    <item name="android:layout_marginStart">16dp</item>
+    <item name="android:layout_marginRight">16dp</item>
+    <item name="android:layout_marginEnd">16dp</item>
+  </style>
+
+  <style name="small_caps">
+    <item name="android:textAllCaps">true</item>
+    <item name="android:textStyle">bold</item>
+  </style>
+
 </resources>
