tease apart EntryWithAllSenses into SearchResultEntry; start adding CrossReference

--- a/app/src/main/res/layout/list_item_entry.xml
+++ b/app/src/main/res/layout/list_item_entry.xml
@@ -7,7 +7,7 @@
   <data>
     <variable
         name="presenter"
-        type="net.emojiparty.android.jishotomo.data.EntryWithAllSenses"
+        type="net.emojiparty.android.jishotomo.data.SearchResultEntry"
         />
   </data>
 
