--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -7,7 +7,7 @@
     <import type="net.emojiparty.android.jishotomo.data.SemicolonSplit"/>
     <variable
         name="presenter"
-        type="net.emojiparty.android.jishotomo.data.EntryWithAllSenses"
+        type="net.emojiparty.android.jishotomo.data.models.EntryWithAllSenses"
         />
   </data>
 
