--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -14,7 +14,7 @@
   <android.support.design.widget.CoordinatorLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      tools:context=".ui.DefinitionActivity"
+      tools:context=".ui.activities.DefinitionActivity"
       >
 
     <android.support.design.widget.AppBarLayout
