--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
-      android:id="@+id/action_settings"
-      android:orderInCategory="100"
-      android:title="@string/action_settings"
-      app:showAsAction="never"/>
+      android:id="@+id/menu_search"
+      android:title="@string/action_search"
+      android:icon="@drawable/ic_search"
+      app:showAsAction="ifRoom|collapseActionView"
+      app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
