--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout>
-  <!--<data>-->
-    <!--<variable-->
-        <!--name="presenter"-->
-        <!--type="net.emojiparty.android.popularmovies.presenters.MoviePresenter"-->
-        <!--/>-->
-  <!--</data>-->
 
-  <android.support.constraint.ConstraintLayout
+  <FrameLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:orientation="vertical"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       tools:context=".ui.activities.DrawerActivity"
       tools:showIn="@layout/app_bar_drawer"
       >
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/search_results_rv"
@@ -25,5 +27,5 @@
         android:layout_height="match_parent"
         />
 
-  </android.support.constraint.ConstraintLayout>
+  </FrameLayout>
 </layout>
