user can favorite an entry; moved dagger instantiation to app level

--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -135,7 +135,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email"
+        android:onClick="@{() -> presenter.toggleFavorite()}"
+        android:src="@{presenter.entry.favorited ? @drawable/ic_star : @drawable/ic_star_border }"
         />
 
   </android.support.design.widget.CoordinatorLayout>
