--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -4,7 +4,7 @@
   <item
       android:id="@+id/menu_search"
       android:title="@string/action_search"
-      android:icon="@drawable/ic_search"
+      android:icon="@drawable/ic_search_white"
       app:showAsAction="ifRoom|collapseActionView"
       app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
