--- a/app/src/main/res/layout/app_bar_drawer.xml
+++ b/app/src/main/res/layout/app_bar_drawer.xml
@@ -16,11 +16,20 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:layout_width="match_parent"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        />
+        app:popupTheme="@style/AppTheme.PopupOverlay">
+
+      <TextView
+          style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+          android:id="@+id/toolbar_title"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/app_name"
+          />
+
+    </android.support.v7.widget.Toolbar>
 
   </android.support.design.widget.AppBarLayout>
 
