beginnings of a widget

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,10 @@
   <dimen name="text_size_body">20sp</dimen>
   <dimen name="text_size_list_heading">30sp</dimen>
   <dimen name="text_size_headline">36sp</dimen>
+
+  <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+  <dimen name="widget_margin">8dp</dimen>
 </resources>
