styling widget, finally fixed status bar color in definition activity

--- a/app/src/main/res/layout/jisho_tomo_jlpt_widget.xml
+++ b/app/src/main/res/layout/jisho_tomo_jlpt_widget.xml
@@ -1,18 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
     android:id="@+id/widget_container"
+    android:padding="@dimen/widget_margin"
     >
 
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:padding="4dp"
+      android:paddingRight="4dp"
+      android:paddingLeft="4dp"
+      android:paddingTop="6dp"
+      android:paddingBottom="6dp"
       android:background="@color/colorPrimary"
       android:textColor="@android:color/primary_text_dark"
-      android:textSize="@dimen/text_size_body"
+      android:textSize="18sp"
+      android:ellipsize="end"
+      android:maxLines="1"
+      android:singleLine="true"
       android:text="@string/word_of_the_day"
       />
 
@@ -20,37 +28,38 @@
       android:id="@+id/widget_reading"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:paddingLeft="@dimen/widget_margin"
-      android:paddingRight="@dimen/widget_margin"
+      android:paddingLeft="@dimen/widget_internal_padding"
+      android:paddingRight="@dimen/widget_internal_padding"
+      android:paddingTop="4dp"
       android:ellipsize="end"
       android:maxLines="1"
       android:singleLine="true"
       android:textColor="@color/defaultTextColor"
-      android:textSize="@dimen/text_size_body"
+      android:textSize="14sp"
+      tools:text="みなみ"
       />
   <TextView
       android:id="@+id/widget_kanji"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:paddingLeft="@dimen/widget_margin"
-      android:paddingRight="@dimen/widget_margin"
+      android:paddingLeft="@dimen/widget_internal_padding"
+      android:paddingRight="@dimen/widget_internal_padding"
+      android:textColor="@color/defaultTextColor"
       android:ellipsize="end"
       android:maxLines="1"
-      android:textColor="@color/defaultTextColor"
       android:singleLine="true"
-      android:textSize="@dimen/text_size_list_heading"
+      android:textSize="20sp"
+      tools:text="南"
       />
   <TextView
       android:id="@+id/widget_gloss"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:paddingLeft="@dimen/widget_margin"
-      android:paddingRight="@dimen/widget_margin"
-      android:ellipsize="end"
-      android:maxLines="1"
-      android:singleLine="true"
+      android:paddingLeft="@dimen/widget_internal_padding"
+      android:paddingRight="@dimen/widget_internal_padding"
       android:textColor="@color/defaultTextColor"
-      android:textSize="@dimen/text_size_body"
+      android:textSize="14sp"
+      tools:text="south"
       />
 
 </LinearLayout>
