--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,8 @@
   <dimen name="text_size_list_heading">30sp</dimen>
   <dimen name="text_size_headline">36sp</dimen>
 
+  <dimen name="widget_internal_padding">6dp</dimen>
+
   <!--
 Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
